--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Michael J. Williams"
 description              : "My personal website with an assortment of bits and bobs"
 url                      : "https://mj-will.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "https://github.com/mj-will/mj-will.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "mj-will/mj-will.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -207,8 +207,8 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-#paginate: 5 # amount of posts to show
-#paginate_path: /page:num/
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
