--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 
 # main links
 main:
-  - title: "Talks"
-    url: /talks/
+  - title: "Talks & Posters"
+    url: /talksandposters/
   - title: "Publications"
     url: /publications/
 
