--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Michael Williams:
   name        : "Michael J. Williams"
-  uri         : "https://michaeljwilliams.dev/"
+  uri         : "https://michaeljwilliams.me/"
   email       : "michael.williams3@port.ac.uk"
   bio         : "Research Fellow in Gravitational-wave Astrophysics"
   avatar      : "profile.jpg"
