--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Michael J. Williams"
 title_separator          : "-"
 name                     : &name "Michael J. Williams"
 description              : &description "Research Fellow in Gravitational-wave Astrophysics"
-url                      : https://michaeljwilliams.dev/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://michaeljwilliams.me/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://michaeljwilliams.dev/"
+repository               : "https://michaeljwilliams.me/"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
